--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <h2>사랑하는 것들</h2>
 <p style="margin-top:10px;"><strong>세상엔 사랑스러운게 너무 많아</p>
   <p style="margin-top:10px;"><u>예삐 콩이 주영이</u></strong></p>
-<h1>박규뚱</h1>
-성신여대의 자랑<p style="margin-top:10px;"><u>우장산의 자랑</u></p>
-<p><a href="https://www.sungshin.ac.kr/sites/main_kor/main.jsp" target="_blank" title="성신여대">성신여대</a><br>법학과<br><u>대표는 박규연</u><br>
-<img src="규연이.jpg" width="30%">
+<h1>jinys day</h1>
+daily jiny<p style="margin-top:10px;"><u>우장산의 자랑</u></p>
+<p><a href="https://blog.naver.com/luvboss_june" target="_blank" title="jieun blog">지은이 블로그</a><br>리뷰 블로그<br><u>문학,일상 수록</u><br>
+<img src="진바럽.gif" width="30%">
 </body>
