--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <p style="margin-top:10px;"><strong>세상엔 사랑스러운게 너무 많아</p>
   <p style="margin-top:10px;"><u>예삐 콩이 주영이</u></strong></p>
 <h1>jinys day</h1>
-daily jiny<p style="margin-top:10px;"><u>우장산의 자랑</u></p>
+daily jiny<p style="margin-top:10px;"><u>Koreangirl</u></p>
 <p><a href="https://blog.naver.com/luvboss_june" target="_blank" title="jieun blog">지은이 블로그</a><br>리뷰 블로그<br><u>문학,일상 수록</u><br>
 <img src="진바럽.gif" width="30%">
 </body>
